[project]
name = "deepagents-sample"
version = "0.1.0"
description = "Sample project demonstrating DeepAgents with LangChain v1+, LangGraph, and MCP tool integration"
readme = "README.md"
authors = [
    { name = "PK", email = "pradhyu.shrestha@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
